--- a/MAIL/index.html
+++ b/MAIL/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>JS-MAIL</title>
   </head>
   <body>
+    <h1 class="title">EMAIL</h1>
+    <div class="card">
+      <div>
+        <div class="text-mail">Inserisci la tua email</div>
+        <input class="email-input" type="text" placeholder="scrivi email" />
+        <button class="button">Ciao</button>
+        <div class="result"></div>
+      </div>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
